# LearningApp

./: mypy.ini  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst
src/lapp/: __init__.py  app.py
tests/test_lapp/: test_app.py
