[tool.poetry]
name = "lapp"
version = "0.0.0"
description = "Basic learning application in python."
authors = ["ProgrammingDao"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^22.2.0"
kivy = {version = "^2.1.0", extras = ["base"]}

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"
